# pqc-tester

./: .gitignore  .gitmodules  .python-version  README.md  cli.py  pyproject.toml
adapters/: base.py  cat_adapter.py  lattice_adapter.py
core/: models.py  normalizer.py  router.py
docker/: Dockerfile.cat  cat.py
presets/: bike-l1.json  bike-l3.json  bike-l5.json  code-small.json  code-tiny.json  dilithium2.json  dilithium3.json  dilithium5.json  falcon1024.json  falcon512.json  firesaber.json  hqc128.json  hqc192.json  hqc256.json  kyber1024.json  kyber512.json  kyber768.json  lightsaber.json  mceliece348864.json  saber.json  test-small.json  test-tiny.json  test_weak_rlwe.json
runners/: cat_runner.py  sage_runner.py
