
[project]
name = "pqc-tester"
version = "0.1.0"
description = "Unified security estimator wrapper for code- and lattice-based crypto (CAT + lattice-estimator)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "runners*", "adapters*", "presets*"]

[project.scripts]
sec-estimate = "cli:app"
